# baqcs

./: .gitignore  LICENSE.txt  README.rst  pyproject.toml  setup.py
notebooks/: example1.ipynb
src/baqcs/: __init__.py  circuit.py  estimator.py  guides.py  models.py  sampler.py  session.py
